fix the gray/light gray declaration for color contrast

--- a/source/_patterns/01-atoms/overlays/_overlays.scss
+++ b/source/_patterns/01-atoms/overlays/_overlays.scss
@@ -59,10 +59,10 @@ $overlay-transparency: 0.4;
 }
 
 .gray-overlay {
-  background: $gray;
+  background: $light-gray;
 
   &:after {
-    background: transparentize($gray, $overlay-transparency);
+    background: transparentize($light-gray, $overlay-transparency);
   }
 
   h1,
